login page is created

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
       <h1></h1>
       <p>Welcome to Lafarge Warehouse: Explore Our Warehouse for Extraordinary Finds!</p>
       <button>Warehouse</button>
+    </div>
     
     <div class="about-me">
       <div class="about-me-text">
