registration&login fixed

--- a/main.html
+++ b/main.html
@@ -199,9 +199,9 @@
 
 <body>
   <header class="header">
-    <a href="index.html" class="logo">Lafarge Warehouse</a>
+    <a href="main.html" class="logo">Lafarge Warehouse</a>
     <nav class="nav-items">
-        <a href="index.html">Home</a>
+        <a href="main.html">Home</a>
         <a href="db.php">Items</a>
        
        
